# Smooth-read

./: Cargo.toml  Dioxus.toml  README.md
extension/: index.html  package-lock.json  package.json  webpack.config.js
extension/src/: background.js  content.js  lib.js  manifest.json  popup.js
extension/src/assets/dioxus/: smooth-read.js
extension/src/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js
