[package]
name = "smooth-read"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Debug
dioxus-logger = "0.5.1"

dioxus = { version = "0.5", features = ["web"] }
wasm-bindgen = { version = "0.2.93", features = ["serde-serialize"] }
web-sys = { version = "0.3.70", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Element",
  "Node",
  "CssStyleDeclaration",
  "console",
] }
serde = "1.0.210"
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
